added isUserFollowedPath
