# service/api/api-handler.go
@@ -14,15 +14,16 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/liveness", rt.liveness)
 	rt.router.GET("/bans", rt.wrap(handleGetBannedUsers))
 	rt.router.GET("/users/username/:username", rt.wrap(HandleGetUserProfile))
-	rt.router.GET("/users/id/:userID", rt.wrap(HandleGetUserProfileID))
+	rt.router.GET("/users/id/:userId", rt.wrap(HandleGetUserProfileID))
 	rt.router.GET("/photos", rt.wrap(handleGetPhotos))
 	rt.router.GET("/users", rt.wrap(HandleGetAllUsers))
 	rt.router.GET("/photos/:photoId/comment/", rt.wrap(handleGetComments))
 	rt.router.GET("/stream", rt.wrap(handleGetMyStream))
 	rt.router.GET("/users/followers/:username", rt.wrap(handleGetFollowers))
 	rt.router.GET("/photos/:photoId", rt.wrap(handleGetPhoto))
-	rt.router.GET("/username/:userID", rt.wrap(handleGetUsername))
+	rt.router.GET("/username/:userId", rt.wrap(handleGetUsername))
 	rt.router.GET("/likes/:photoId", rt.wrap(HandleIsLiked))
+	rt.router.GET("/follows/:userId", rt.wrap(handleIsUserFollowed))
 	rt.router.POST("/users", rt.wrap(HandleAddUser))
 	rt.router.POST("/photos/:photoId/comments", rt.wrap(handleCommentPhoto))
 	rt.router.POST("/photos/:photoId/likes", rt.wrap(HandleLikePhoto))
